--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     ]
   },
   "devDependencies": {
+    "husky": "^4.2.1",
     "prettier": "^1.19.1",
     "tslint": "^6.0.0",
     "tslint-config-prettier": "^1.18.0",
