--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react-redux": "^7.1.7",
     "@types/react-router-dom": "^5.1.3",
     "@types/redux-logger": "^3.0.7",
+    "@types/storybook__addon-info": "^5.2.1",
     "axios": "^0.19.2",
     "node-sass": "^4.13.1",
     "react": "^16.12.0",
@@ -55,6 +56,7 @@
     "@commitlint/cli": "^8.3.5",
     "@commitlint/config-conventional": "^8.3.4",
     "@storybook/addon-actions": "^5.3.9",
+    "@storybook/addon-info": "^5.3.9",
     "@storybook/addon-links": "^5.3.9",
     "@storybook/addons": "^5.3.9",
     "@storybook/preset-create-react-app": "^1.5.2",
