--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "@types/react-redux": "^7.1.7",
     "@types/react-router-dom": "^5.1.3",
     "@types/redux-logger": "^3.0.7",
+    "autoprefixer": "^9.7.4",
     "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
     "husky": "^4.2.1",
     "node-sass": "^4.13.1",
+    "postcss-cli": "^7.1.0",
     "prettier": "^1.19.1",
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.16",
@@ -31,6 +33,7 @@
     "redux-axios-middleware": "^4.0.1",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
+    "tailwindcss": "^1.1.4",
     "tslint": "^6.0.0",
     "tslint-config-prettier": "^1.18.0",
     "tslint-plugin-prettier": "^2.1.0",
@@ -43,7 +46,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "lint": "tslint -p ./tsconfig.json",
-    "lint:fix": "tslint --fix -p ./tsconfig.json"
+    "lint:fix": "tslint --fix -p ./tsconfig.json",
+    "build:style":"tailwind build src/styles/index.css -o src/styles/tailwind.css"
   },
   "eslintConfig": {
     "extends": "react-app"
